<resources>
    <string name="app_name">NetSegment</string>
    <string name="server_label">Server</string>
    <string name="client_label">Client</string>
    <string name="ip_address">IP:</string>
    <string name="ip_address_server">Server IP:</string>

    <string name="start_measure">Start measure</string>
    <string name="stop_measure">Stop measure</string>

    <string name="snackbar_error">Error loading</string>
    <string name="snackbar_action">Retry</string>

    <string name="open_socket">Open socket</string>
    <string name="close_socket">Close socket</string>
    <string name="open_socket_failed">Failed open socket on port %d</string>

    <string name="ip_getting">Getting IP</string>
    <string name="ip_got">IP got:</string>
    <string name="ip_getting_error">Error IP getting</string>

    <string name="local_ip_address">Local IP:</string>
    <string name="port">Port:</string>
    <string name="port_hint">Socket port</string>

    <string name="incorrect_port">Incorrect port</string>

    <string name="socket_already_opened">Socket already opened</string>
    <string name="socket_closed">Socket on the port %s closed</string>
    <string name="socket_opened">Socket on the port %s opened</string>

    <string name="connect">Connect</string>
    <string name="connected">Connected to %s:%s</string>
    <string name="disconnect">Disconnect</string>

    <string name="ping_pattern">%s mcs</string>

    <string name="connect_error">Error connect to %s:%s</string>
    <string name="connect_try">Connecting to %s:%s</string>

    <string name="show_result">Result</string>

    <string name="measures_start">Measures start</string>
    <string name="measures_end">Measures end</string>
    <string name="exception">Exception: %s</string>
    <string name="client_disconnect">Client disconnect</string>

    <string name="count_iterations">Iteration count</string>

    <string name="conn_state_idle">IDLE</string>
    <string name="conn_state_measure">MEASURE</string>
    <string name="save_result">Save result</string>

</resources>