<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.client.ClientFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/ip_address"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/ip_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="192.168.1.127" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ip_server_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/ip_address_server"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ip_label" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_server_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:maxLines="1"
            android:text="127.0.0.1"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/ip_server_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/ip_server_label"
            app:layout_constraintTop_toTopOf="@id/ip_server_label"
            tools:text="192.128.3.4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/et_server_ip"
            app:layout_constraintTop_toTopOf="@id/et_server_ip"
            tools:text="52 мс" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:hint="@string/port_hint"
            android:inputType="numberDecimal"
            android:text="23555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_server_ip" />

        <RadioGroup
            android:id="@+id/rg_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:checkedButton="@id/rb_tcp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_port">

            <RadioButton
                android:id="@+id/rb_tcp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="TCP"/>

            <RadioButton
                android:id="@+id/rb_udp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UDP"/>

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/button_purple_selector"
            android:paddingHorizontal="6dp"
            android:text="@string/connect"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_disconnect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_protocol" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/button_purple_selector"
            android:paddingHorizontal="6dp"
            android:text="@string/disconnect"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_connect"
            app:layout_constraintTop_toBottomOf="@id/rg_protocol" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_connect" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>