<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.server.ServerFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/ip_address"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/ip_label"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="192.168.1.127" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/local_ip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/local_ip_address"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ip" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_local_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/local_ip_label"
                app:layout_constraintTop_toTopOf="@id/local_ip_label"
                tools:text="192.168.1.127" />

            <EditText
                android:id="@+id/et_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:hint="@string/port_hint"
                android:inputType="numberDecimal"
                android:text="23555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_local_ip" />

            <RadioGroup
                android:id="@+id/rg_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:checkedButton="@id/rb_tcp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_port">

                <RadioButton
                    android:id="@+id/rb_tcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="TCP" />

                <RadioButton
                    android:id="@+id/rb_udp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UDP" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_open"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/button_purple_selector"
                android:paddingHorizontal="6dp"
                android:text="@string/open_socket"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_protocol" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/button_purple_selector"
                android:paddingHorizontal="6dp"
                android:text="@string/close_socket"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_open"
                app:layout_constraintTop_toBottomOf="@id/rg_protocol" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_close">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/conn_tv_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@color/teal_700"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="2dp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/barrier1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="UDP" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_smartphone"
                    app:layout_constraintBottom_toBottomOf="@id/barrier1"
                    app:layout_constraintStart_toEndOf="@id/conn_tv_protocol"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/conn_tv_ip_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/ip_address"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintTop_toTopOf="@id/icon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/conn_tv_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/conn_tv_ip_label"
                    app:layout_constraintTop_toTopOf="@id/conn_tv_ip_label"
                    tools:text="192.168.0.1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/conn_tv_port_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/port"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/icon"
                    app:layout_constraintStart_toEndOf="@id/icon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/conn_tv_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/conn_tv_port_label"
                    app:layout_constraintTop_toTopOf="@id/conn_tv_port_label"
                    tools:text="4444" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/conn_tv_ping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintBottom_toBottomOf="@id/barrier1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="52 мс" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="conn_tv_protocol" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/conn_btn_start_test"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_teal_selector"
                    android:text="@string/start_test"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/conn_btn_stop_test"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/conn_btn_stop_test"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_teal_selector"
                    android:text="@string/stop_test"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/conn_btn_show_result"
                    app:layout_constraintStart_toEndOf="@id/conn_btn_start_test"
                    app:layout_constraintTop_toBottomOf="@id/barrier1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/conn_btn_show_result"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_teal_selector"
                    android:text="@string/show_result"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/conn_btn_stop_test"
                    app:layout_constraintTop_toBottomOf="@id/barrier1" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="conn_btn_start_test, conn_btn_stop_test, conn_btn_show_result" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/conn_rv_logs"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="4dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier2"
                    tools:itemCount="10" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>